--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="vizitka">
-    <img src="images/foto.jpg" alt="Eliška Veselá">
-    <h1>Eliška Veselá</h1>
+    <img src="images/foto.jpg" alt="Eliška Veselá" class="fotoElisky">
+    <h1 class="nadpisEliska">Eliška Veselá</h1>
 
     <div class="text">
       <p>Pracuje jako programátorka a učí neuronové sítě rozpoznávat obličeje a předměty. Vystudovala ČVUT v Praze a v 26 letech založila startup, kterým dnes úspěšně válcuje velké americké firmy.</p>
@@ -18,8 +19,8 @@
       <p>I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
     </div>
 
-    <a href="https://twitter.com/" class="Twitter">Twitter</a>
-    <a href="https://www.facebook.com/" class="Facebook">Facebook</a>
+    <a href="https://twitter.com/" class="tlacitko twitter">Twitter</a>
+    <a href="https://www.facebook.com/" class="tlacitko facebook">Facebook</a>
   </div>
 
 </body>
